# Engineering-Informatics-1-MSE-WS1920

./: .gitignore  CMakeLists.txt  README.md
additional-exercises/: README.md  exercise_1_average_lifetime_of_bacteria.c  exercise_2_rock_paper_scissors.c  exercise_3_advanced_parentheses_logic.c  exercise_3_parentheses_logic.c  exercise_4_calculate_checksum.c  exercise_5_harshad_numbers.c  exercise_6_perfect_numbers.c
tutorial-01/: README.md  hello_world.c
tutorial-02/: README.md  example.c  example_2_1_boolean.c  example_2_2_overflow.c  example_2_3_integer_division.c  example_2_4_division_remainder.c  exercise_2_3_random.c  exercise_2_4_b.c  exercise_2_4_d.c  exercise_2_4_e.c  exercise_2_4_f.c  exercise_2_5_fizzbuzz.c
tutorial-03/: README.md  example_3_1_exit_code.c  example_3_2_char_array.c  example_3_3_basic_IO_really_unsafe.c  example_3_4_basic_IO_unsafe.c  example_3_5_basic_IO_safe.c  example_3_6_atoi.c  example_3_7_for_loop.c  example_3_8_switch.c  exercise_3_1_c.c  exercise_3_2_a.c  exercise_3_2_b.c  exercise_3_2_c.c
tutorial-04/: README.md  example_4_1_arrays.c  example_4_2_return.c  example_4_3_return_stop.c  example_4_4_gobal_scope.c  example_4_5_a_local_scope.c  example_4_5_b_local_scope.c  example_4_6_a_local_scope.c  example_4_6_b_local_scope.c  example_4_7_bad_readability.c  example_4_8_good_readability.c  exercise_4_1_a.c  exercise_4_1_b.c  exercise_4_2_a_main.c  exercise_4_2_a_tree.c  exercise_4_2_b_main.c  exercise_4_2_b_prime.c  exercise_4_2_c_binary.c  exercise_4_2_c_main.c
tutorial-05/: README.md  example_5_1_matrix_initialisation.c  example_5_2_diagonal_matrix.c  example_5_3_struct_array.c  example_5_4_enums.c  exercise_5_1_a.c  exercise_5_1_b.c  exercise_5_1_c.c  exercise_5_1_d.c  exercise_5_1_e.c  exercise_5_2_a_symmetric.c  exercise_5_2_b_skew_symmetric.c  exercise_5_2_matrix_main.c  exercise_5_3_abcd.c  exercise_5_3_efg.c  exercise_5_3_efg_advanced.c  helpers_5_1_print_int_matrix.c
tutorial-06/: README.md  example_6_3_local_static.c
tutorial-06/example_6_1_shared_functions/: main.c  print_matrices.c  print_matrices.h
tutorial-06/example_6_2_shared_variables/: main.c  my_vars.c  my_vars.h
tutorial-07/: README.md  example_7_1_pointer_intro.c  example_7_2_passing_by_value.c  example_7_3_passing_by_reference.c  example_7_4_array.c  example_7_5_array_index_access.c  example_7_6_array_pointer_access.c  exercise_7_3_stack_implementation.h  exercise_7_3_stack_implementation_boilerplate.c  exercise_7_3_stack_main.c  exercise_7_3_stack_main_correction.c
tutorial-07/example_7_3_stack/: stack.h  stack_main_correction.c
tutorial-07/matrix_homework/: 8x8_matrix_main.c
tutorial-07/practice_project_stack/: stack.c  stack.h  stack_boilerplate.c  stack_main.c  stack_main_correction.c
tutorial-08/: README.md  example_8_1_static_allocation.c  example_8_2_dynamic_allocation_malloc.c  example_8_3_dynamic_allocation_calloc.c  example_8_4_factorial_loop.c  example_8_5_factorial_recursion.c
tutorial-08/equation-solver/: main.c  string_operations.h
tutorial-08/practice_project_equation_solver/: equation_1_add_sub.c  equation_2_mul_div.c  string_operations.c  string_operations.h
tutorial-08/practice_project_parenthesis_logic/: exercise_3_parentheses_logic.c
tutorial-09/: CMakeLists.txt  README.md  example_9_1_higher_order_function.c
tutorial-09/list_project/: CMakeLists.txt  README.md  list.h  list_main.c  map.h  map_main.c
tutorial-09/list_project/boilerplate/: list_boilerplate.c  map_boilerplate.c
tutorial-09/list_project/solution/: list_solution.c  map_solution.c
tutorial-09/practice_project_singly_linked_list/: list_boilerplate.c  list_map_boilerplate.c  main_map.c
tutorial-09/practice_project_singly_linked_list/boilerplate/: list_boilerplate.c  map_boilerplate.c
tutorial-09/practice_project_singly_linked_list/solution/: list.c
tutorial-10/: README.md
tutorial-10/car_dealer_project/: CMakeLists.txt  README.md  car_dealer.h  car_dealer_main.c
tutorial-10/car_dealer_project/boilerplate/: car_dealer_boilerplate.c
tutorial-10/car_dealer_project/solution/: car_dealer_solution.c
tutorial-11/: README.md
tutorial-11/tree_project/: bfs.h  bfs_main.c  dfs.h  dfs_main.c
tutorial-11/tree_project/boilerplate/: bfs_boilerplate.c  dfs_boilerplate.c
tutorial-11/tree_project/solution/: bfs_solution.c  dfs_solution.c
tutorial-11/tree_project/tree/: tree.c  tree.h
tutorial-12/: README.md  exercise_12_02_bubble_sort_boilerplate.c  exercise_12_02_bubble_sort_solution.c  exercise_12_04_merge_sort_boilerplate.c  exercise_12_04_merge_sort_solution.c  exercise_12_05_binary_search_boilerplate.c  exercise_12_05_binary_search_solution.c
tutorial-13/: README.md  example_13_1_bitwise.c
